5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1815_2566.log
== TEST (2019-06-05 19:22:12) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(7, dtype=int)

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:39:53) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i <= size(v)):
		z [i] = z [i] + 1
	
for p in range(size(z)):
	z[p] = round((z[p]/100),2)
	
	print (z[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:39:53) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i <= size(v)):
		z [i] = z [i] + 1
	
for p in range(size(z)):
	z[p] = round((z[p]/100),2)
	
	print (z[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:40:17) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	
for p in range(size(z)):
	z[p] = round((z[p]/100),2)
	
	print (z[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:44:18) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	
for p in range(size(z) - 1):
	z[p] = round((z[p]/100),2)
	
	print (z[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:44:44) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1

	print (z[p])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:44:54) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1

	print (z[i])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:53:35) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

por = sum(z)/100

print(por)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:55:33) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

por = sum(z)

for p in range(size(z) - 1):
	f = por/z[p]
	
	print (f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:56:09) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

por = sum(z)

for p in range(size(z) - 1):
	if(z[p] > 0):
		f = por/z[p]
	
	print (f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:56:20) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

por = sum(z)

for p in range(size(z) - 1):
	if(z[p] > 0):
		f = por/z[p]
	
	print (f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:56:30) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

por = sum(z)

for p in range(size(z) - 1):
	if(z[p] > 0):
		f = por/z[p]
	
	print (f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 12:56:43) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

por = sum(z)

for p in range(size(z) - 1):
	if(z[p] > 0):
		f = por/z[p]
	
	print (f)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:03:30) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

for p in range(5):
	por = (z[p]/6)*100
	
	print(por)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:03:54) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

for p in range(5):
	por = (z[p]/6)*100
	
	print(round(por,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:04:15) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

for p in range(5):
	por = (z[p]/5)*100
	
	print(round(por,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:04:21) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

for p in range(5):
	por = (z[p]/5)*100
	
	print(round(por,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:06:00) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

for p in range(6):
	por = (z[p]/5)*100
	
	print(round(por,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:07:19) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

for p in range(6):
	por = (z[p]/6)*100
	
	print(round(por,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:07:39) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if (i < size(v)):
		z [i] = z [i] + 1
	

for p in range(6):
	por = (z[p]/6)*100
	
	print(round(por,1))

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:14:18) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(1, 7):
	if (v[i] == i+1):
		z[i] = z [i] + 1
	

for p in range(6):
	por = (z[p]/6)*100
	
	print(round(por,1))

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:14:44) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == i+1):
		z[i] = z [i] + 1
	

for p in range(6):
	por = (z[p]/6)*100
	
	print(round(por,1))

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:15:08) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[i] = z [i] + 1
	

for p in range(6):
	por = (z[p]/6)*100
	
	print(round(por,1))

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:15:29) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[i] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:16:01) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[1] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:16:12) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[0] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:16:22) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[0] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:16:24) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[0] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:16:41) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[0] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:16:44) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[0] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:16:47) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 1):
	if (v[i] == 2):
		z[0] = z [i] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:19:20) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in v:
	if i == 2:
		z[0] = z[0] + 1
	elif i == 3:
		z[1] == z[1] + 1
	elif i == 4:
		z[2] == z[2] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:19:33) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in v:
	if i == 2:
		z[0] = z[0] + 1
	elif i == 3:
		z[1] == z[1] + 1
	elif i == 4:
		z[2] == z[2] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:20:09) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in v:
	if (i == 2):
		z[0] = z[0] + 1
	elif (i == 3):
		z[1] == z[1] + 1
	elif (i == 4):
		z[2] == z[2] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:20:27) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in v:
	if (i == 2):
		z[0] = z[0] + 1
	elif (i == 3):
		z[1] == z[1] + 1
	elif (i == 4):
		z[2] == z[2] + 1

print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:24:02) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in v:
	print(i)
	if (i == 2):
		z[0] = z[0] + 1
	elif (i == 3):
		z[1] == z[1] + 1
	elif (i == 4):
		z[2] == z[2] + 1

	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:25:04) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in v:
	print(i)
	if (i == 2):
		z[0] = z[0] + 1
	if (i == 3):
		z[1] == z[1] + 1
	if (i == 4):
		z[2] == z[2] + 1

	print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:26:42) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[i] = z[i] + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:26:53) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[i] = z[i] + 1
		
print z
-- ERROR:
File "XXXX", line 11
    print z
          ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(z)?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:26:57) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[i] = z[i] + 1
		
print (z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:27:16) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
		
print (z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:27:46) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
		
print (z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:27:50) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
		
print (z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:27:55) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
		
print (z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:29:38) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	
	while v[i] == i + 2
		z[i] = z[i] + 1
	
print (z)
-- ERROR:
File "XXXX", line 9
    while v[i] == i + 2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:30:07) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	
	while (v[i] == i + 2):
		z[i] = z[i] + 1

print (z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:07) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] < i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:10) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:11) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:11) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:16) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:17) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:18) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:18) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:22) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] > i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:22) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] > i + 2):
		z[i] = z[i] + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 17
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:31:45) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] == i + 2):
		z[i] = z[i] + 1
		i = i + 1

print (z)


	
	
	
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2]
-- ERROR:
File "XXXX", line 18
    if v[i] == 2:
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:32:08) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] == i + 2):
		z[i] = z[i] + 1

print (z)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:32:17) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] == i + 2):
		z[i] = z[i] + 1
		i = i + 1

print (z)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:32:26) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1
		i = i + 1

print (z)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:32:40) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v) - 2):
	while (v[i] <= i + 2):
		z[i] = z[i] + 1
		i = i + 1

print (z)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:33:30) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (i < size(v)):
		if (v[i] == i + 2):
			z[i] = z[i] + 1

print (z)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:33:46) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	while (i < size(v)):
		if (v[i] == i + 2):
			z[i] = z[i] + 1
	print (z[i])
print (z)


	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:41:41) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

for p in range(6):
	por = (z[p]/sum(z))*100
	print(z)
	print(por)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:43:42) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

for p in range(6):
	por = (z[p]/sum(z))*100

	z[p] = por
	
	print(z)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:44:06) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

for p in range(6):
	por = (z[p]/sum(z))*100
	z[p] = por
	
	print(z)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:44:46) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

for p in range(6):
	por = (z[p]/sum(z))*100
	z[p] = por
	
	print(z)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:46:24) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6, dtype=int)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:46:33) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6, dtype=int)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:46:51) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6, dtype=int)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:47:05) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6, dtype=int)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:47:27) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:47:28) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 13:47:30) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- EXECUTION TIME:
1.1784
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.   18.75  0.    0.  ]
[18.75  0.    0.   18.75 25.    0.  ]
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
Faltas: [4. 0. 0. 0. 0. 0.]
[4. 8. 0. 0. 0. 0.]
[ 4.  8. 16.  0.  0.  0.]
[ 4.  8. 16. 20.  0.  0.]
[ 4.  8. 16. 20. 20.  0.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
Faltas: [15.38461538  0.          0.          0.          0.          0.        ]
[15.38461538  7.69230769  0.          0.          0.          0.        ]
[15.38461538  7.69230769 23.07692308  0.          0.          0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769  0.          0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538  0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:47:46) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 13:48:09) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- EXECUTION TIME:
1.293
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.   18.75  0.    0.  ]
[18.75  0.    0.   18.75 25.    0.  ]
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[4. 0. 0. 0. 0. 0.]
[4. 8. 0. 0. 0. 0.]
[ 4.  8. 16.  0.  0.  0.]
[ 4.  8. 16. 20.  0.  0.]
[ 4.  8. 16. 20. 20.  0.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  0.          0.          0.          0.          0.        ]
[15.38461538  7.69230769  0.          0.          0.          0.        ]
[15.38461538  7.69230769 23.07692308  0.          0.          0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769  0.          0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538  0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:48:12) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:48:34) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 13:48:38) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- EXECUTION TIME:
1.22498
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.    0.    0.    0.  ]
[18.75  0.    0.   18.75  0.    0.  ]
[18.75  0.    0.   18.75 25.    0.  ]
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[4. 0. 0. 0. 0. 0.]
[4. 8. 0. 0. 0. 0.]
[ 4.  8. 16.  0.  0.  0.]
[ 4.  8. 16. 20.  0.  0.]
[ 4.  8. 16. 20. 20.  0.]
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  0.          0.          0.          0.          0.        ]
[15.38461538  7.69230769  0.          0.          0.          0.        ]
[15.38461538  7.69230769 23.07692308  0.          0.          0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769  0.          0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538  0.        ]
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:48:40) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
	print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:49:16) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 13:49:24) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = (z[p]/sum(z))*100
	f[p] = por
	
print(f)

	
	

-- EXECUTION TIME:
1.15412
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.75  0.    0.   18.75 25.   37.5 ]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.38461538  7.69230769 23.07692308  7.69230769 15.38461538 30.76923077]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 13:49:53) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = round(((z[p]/sum(z))*100),1)
	f[p] = por
	
print(f)

	
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 13:50:01) 
-- CODE:
from numpy import *

v = array(eval(input("Faltas: ")))

z = zeros(6, dtype=int)

for i in range(size(v)):
	if v[i] == 2:
		z[0] = z[0] + 1
	elif v[i] == 3:
		z[1] = z[1] + 1
	elif v[i] == 4:
		z[2] = z[2] + 1
	elif v[i] == 5:
		z[3] = z[3] + 1
	elif v[i] == 6:
		z[4] = z[4] + 1
	elif v[i] == 7:
		z[5] = z[5] + 1

		
f = zeros(6)
for p in range(6):
	por = round(((z[p]/sum(z))*100),1)
	f[p] = por
	
print(f)

	
	

-- EXECUTION TIME:
1.1293
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
